--- a/ModuleInfosJson/apps_marketing_recover_cart.json
+++ b/ModuleInfosJson/apps_marketing_recover_cart.json
@@ -1,7 +1,7 @@
 {
   "title":			"apps_marketing_recover_cart",
   "type":           "apps",
-  "vendor":			"ClicShopping",
+  "vendor":			"Marketing",
   "is_free":   "no",
   "is_core": "no",
   "website_link_to_sell" : "",
